@@ -7,15 +7,23 @@ class ApplicationController < ActionController::Base
   helper :all # include all helpers, all the time
   protect_from_forgery # See ActionController::RequestForgeryProtection for details
 
+  # Filters
+  before_filter :load_configuration
+
   # Scrub sensitive parameters from your log
   filter_parameter_logging :password
 
   private
   def get_filtered_tweets
-    @filtered_tweets = Tweet.find(:all, :conditions => ["text like ?", "%#{G140[:today_topic]}%"], :order => 'original_tweet_id DESC', :limit => G140[:tweets_per_hashtag], :include => :user)
+    @filtered_tweets = Tweet.find(:all, :conditions => ["text like ?", "%#{@configuration.today_topic}%"], :order => 'original_tweet_id DESC', :limit => G140[:tweets_per_hashtag], :include => :user)
   end
 
   def get_trending_tags
     @trending_tags = Tag.trending_tags
   end
+
+  def load_configuration
+    @configuration = Configuration.first
+  end
+
 end
