@@ -1,0 +1,5 @@
+class ConfigurationsController < InheritedResources::Base
+
+  respond_to :js, :only => :update
+
+end
