@@ -296,6 +296,21 @@
     .right
       float: right
 
+  #edit_configuration_1
+    background: #fff
+    border: 2px solid #000
+    margin-bottom: 10px
+    padding: 10px
+    width: 330px
+    z-index: 10000
+    +border-radius(8px)
+
+    input[type='text']
+      width: 180px
+
+    .commit
+      float: left
+
 #trends
   margin-bottom: 20px
 
