@@ -1,0 +1,2 @@
+$('#edit_configuration_1').hide();
+$('#hashtag_filter h2').html("#{@configuration.today_topic}");
