@@ -5,7 +5,7 @@
     = stylesheet_link_tag 'compiled/text.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/application.css', :media => 'screen, projection'    
     = javascript_include_tag 'jquery-1.4.2.min', 'jquery-ui-1.8.2.custom.min'
-    = javascript_include_tag 'jquery.tools.min', 'charCount', 'jquery.masonry.min'
+    = javascript_include_tag 'jquery.tools.min', 'charCount', 'jquery.masonry.min', 'jintastic'
     = javascript_include_tag 'jrails', 'application'
     %link(rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico")
     %title
