@@ -1,16 +1,22 @@
 #hashtag_filter
-  %h2= G140[:today_topic]
+  %h2
+    //= G140[:today_topic]
+    - if current_user && (current_user.screen_name == '140mk')
+      = in_place_editor_for @configuration, :today_topic
+    - else
+      = @configuration.today_topic
+
   .nav
-    .link.left{"data-hashtag" => G140[:today_topic], "data-offset" => 0}= link_to t('global.newer')
-    .link.right{"data-hashtag" => G140[:today_topic], "data-offset" => 0}= link_to t('global.older')
+    .link.left{"data-hashtag" => @configuration.today_topic, "data-offset" => 0}= link_to t('global.newer')
+    .link.right{"data-hashtag" => @configuration.today_topic, "data-offset" => 0}= link_to t('global.older')
     .clear
 
   .tweets{:id => "tweets_hashtag"}
     = render :partial => 'welcome/tweets', :locals => { :tweets => @filtered_tweets, :name => "fail" }
 
   .nav
-    .link.left{"data-hashtag" => G140[:today_topic], "data-offset" => 0}= link_to t('global.newer')
-    .link.right{"data-hashtag" => G140[:today_topic], "data-offset" => 0}= link_to t('global.older')
+    .link.left{"data-hashtag" => @configuration.today_topic, "data-offset" => 0}= link_to t('global.newer')
+    .link.right{"data-hashtag" => @configuration.today_topic, "data-offset" => 0}= link_to t('global.older')
     .clear
 
   = periodically_call_remote(:url => { :controller => 'tweets', :action => 'refresh', :category_id => 'hashtag' }, :update => "tweets_hashtag", :complete => "reBindOverlays()")
