@@ -5,6 +5,7 @@ ActionController::Routing::Routes.draw do |map|
   map.resources :users
   map.resources :tweets, :collection => {:my => :get, :refresh => :post, :by_hashtag => :post}
   map.resources :categories, :as => :categories, :member => {:create_on_twitter => :post}
+  map.resources :configurations
   map.resources :subscriptions
   map.resources :tags, :only => [:index, :show]
   map.resource :session, :collection => {:callback => :get}
