@@ -745,74 +745,97 @@ body {
 #hashtag_filter .nav .right, #trends .nav .right {
   float: right;
 }
-
 /* line 299, ../../../app/stylesheets/application.sass */
+#hashtag_filter #edit_configuration_1, #trends #edit_configuration_1 {
+  background: white;
+  border: 2px solid black;
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 330px;
+  z-index: 10000;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  border-radius: 8px;
+}
+/* line 308, ../../../app/stylesheets/application.sass */
+#hashtag_filter #edit_configuration_1 input[type='text'], #trends #edit_configuration_1 input[type='text'] {
+  width: 180px;
+}
+/* line 311, ../../../app/stylesheets/application.sass */
+#hashtag_filter #edit_configuration_1 .commit, #trends #edit_configuration_1 .commit {
+  float: left;
+}
+
+/* line 314, ../../../app/stylesheets/application.sass */
 #trends {
   margin-bottom: 20px;
 }
 
-/* line 302, ../../../app/stylesheets/application.sass */
+/* line 317, ../../../app/stylesheets/application.sass */
 #trends .option-box {
   margin: 5px;
   text-align: center;
 }
 
-/* line 306, ../../../app/stylesheets/application.sass */
+/* line 321, ../../../app/stylesheets/application.sass */
 .modal {
   padding: 10px;
 }
-/* line 310, ../../../app/stylesheets/application.sass */
+/* line 325, ../../../app/stylesheets/application.sass */
 .modal form textarea {
   height: 130px;
   width: 320px;
 }
 
-/* line 315, ../../../app/stylesheets/application.sass */
+/* line 330, ../../../app/stylesheets/application.sass */
 #category_show {
   width: 665px;
 }
-/* line 318, ../../../app/stylesheets/application.sass */
+/* line 333, ../../../app/stylesheets/application.sass */
 #category_show h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
-/* line 322, ../../../app/stylesheets/application.sass */
+/* line 337, ../../../app/stylesheets/application.sass */
 #category_show #twitter_create_list {
   cursor: pointer;
 }
-/* line 325, ../../../app/stylesheets/application.sass */
+/* line 340, ../../../app/stylesheets/application.sass */
 #category_show #twitter_create_list_form {
   display: none;
 }
-/* line 328, ../../../app/stylesheets/application.sass */
+/* line 343, ../../../app/stylesheets/application.sass */
 #category_show .category {
   margin-top: 5px;
   margin-right: 0;
   float: left;
 }
-/* line 333, ../../../app/stylesheets/application.sass */
+/* line 348, ../../../app/stylesheets/application.sass */
 #category_show .category h2 {
   width: 300px;
 }
-/* line 336, ../../../app/stylesheets/application.sass */
+/* line 351, ../../../app/stylesheets/application.sass */
 #category_show .category .tweets {
   display: block;
   margin-top: 5px;
 }
 
-/* line 341, ../../../app/stylesheets/application.sass */
+/* line 356, ../../../app/stylesheets/application.sass */
 #category_chooser {
   background: transparent;
   width: 665px;
 }
-/* line 345, ../../../app/stylesheets/application.sass */
+/* line 360, ../../../app/stylesheets/application.sass */
 #category_chooser h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
   height: 40px;
   font-weight: bold;
 }
-/* line 351, ../../../app/stylesheets/application.sass */
+/* line 366, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable, #category_chooser .action-area {
   background: #bfd9e6;
   font-size: 0.85em;
@@ -820,7 +843,7 @@ body {
   margin-top: 10px;
   padding: 15px;
 }
-/* line 358, ../../../app/stylesheets/application.sass */
+/* line 373, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable span, #category_chooser #droppable span {
   background: #f7fcfe;
   color: #666666;
@@ -839,25 +862,25 @@ body {
   -o-box-shadow: #9dc2d5 0px 0px 10px;
   box-shadow: #9dc2d5 0px 0px 10px;
 }
-/* line 368, ../../../app/stylesheets/application.sass */
+/* line 383, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable span.ui-state-disabled {
   color: #999999;
   background: #eeeeee;
 }
-/* line 372, ../../../app/stylesheets/application.sass */
+/* line 387, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable {
   margin: 0;
 }
-/* line 375, ../../../app/stylesheets/application.sass */
+/* line 390, ../../../app/stylesheets/application.sass */
 #category_chooser .action-area {
   padding: 0;
 }
-/* line 378, ../../../app/stylesheets/application.sass */
+/* line 393, ../../../app/stylesheets/application.sass */
 #category_chooser .action-area #droppable {
   min-height: 30px;
   padding: 15px;
 }
-/* line 381, ../../../app/stylesheets/application.sass */
+/* line 396, ../../../app/stylesheets/application.sass */
 #category_chooser p {
   background: #373d44;
   color: white;
@@ -867,22 +890,22 @@ body {
   padding: 15px;
 }
 
-/* line 389, ../../../app/stylesheets/application.sass */
+/* line 404, ../../../app/stylesheets/application.sass */
 .box {
   width: 665px;
 }
-/* line 392, ../../../app/stylesheets/application.sass */
+/* line 407, ../../../app/stylesheets/application.sass */
 .box h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
   height: 40px;
   font-weight: bold;
 }
-/* line 398, ../../../app/stylesheets/application.sass */
+/* line 413, ../../../app/stylesheets/application.sass */
 .box .content {
   padding: 10px;
 }
-/* line 401, ../../../app/stylesheets/application.sass */
+/* line 416, ../../../app/stylesheets/application.sass */
 .box .content .item {
   background: #f7fcfe;
   padding: 4px;
@@ -895,12 +918,12 @@ body {
   -khtml-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 408, ../../../app/stylesheets/application.sass */
+/* line 423, ../../../app/stylesheets/application.sass */
 .box .content a.item {
   color: black;
   text-decoration: none;
 }
-/* line 412, ../../../app/stylesheets/application.sass */
+/* line 427, ../../../app/stylesheets/application.sass */
 .box .rounded_box {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -914,43 +937,43 @@ body {
   height: 25px;
   text-align: center;
 }
-/* line 420, ../../../app/stylesheets/application.sass */
+/* line 435, ../../../app/stylesheets/application.sass */
 .box .rounded_box a {
   font-size: 15px;
   color: #04abe2;
   text-decoration: none;
 }
 
-/* line 426, ../../../app/stylesheets/application.sass */
+/* line 441, ../../../app/stylesheets/application.sass */
 .users_list {
   width: 665px;
 }
-/* line 429, ../../../app/stylesheets/application.sass */
+/* line 444, ../../../app/stylesheets/application.sass */
 .users_list .users {
   display: block;
 }
-/* line 432, ../../../app/stylesheets/application.sass */
+/* line 447, ../../../app/stylesheets/application.sass */
 .users_list .users .tweet {
   width: 282px;
   float: left;
   margin-right: 10px;
   margin-left: 10px;
 }
-/* line 438, ../../../app/stylesheets/application.sass */
+/* line 453, ../../../app/stylesheets/application.sass */
 .users_list .users .tweet .body {
   min-height: 100px;
 }
-/* line 442, ../../../app/stylesheets/application.sass */
+/* line 457, ../../../app/stylesheets/application.sass */
 .users_list h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
 
-/* line 446, ../../../app/stylesheets/application.sass */
+/* line 461, ../../../app/stylesheets/application.sass */
 .categories_list {
   width: 665px;
 }
-/* line 450, ../../../app/stylesheets/application.sass */
+/* line 465, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list {
   background: #f7fcfe;
   width: 292px;
@@ -958,36 +981,36 @@ body {
   margin-right: 10px;
   min-height: 45px;
 }
-/* line 457, ../../../app/stylesheets/application.sass */
+/* line 472, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list:hover {
   background: white;
 }
-/* line 460, ../../../app/stylesheets/application.sass */
+/* line 475, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list .body {
   padding-left: 10px;
 }
-/* line 463, ../../../app/stylesheets/application.sass */
+/* line 478, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list .body h3 {
   margin-bottom: 0;
 }
-/* line 466, ../../../app/stylesheets/application.sass */
+/* line 481, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list .body .members {
   font-size: 1.2em;
   margin-left: 3px;
 }
-/* line 470, ../../../app/stylesheets/application.sass */
+/* line 485, ../../../app/stylesheets/application.sass */
 .categories_list h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
 
-/* line 474, ../../../app/stylesheets/application.sass */
+/* line 489, ../../../app/stylesheets/application.sass */
 .pagination {
   text-align: center;
   clear: both;
 }
 
-/* line 478, ../../../app/stylesheets/application.sass */
+/* line 493, ../../../app/stylesheets/application.sass */
 #create_list_from_category {
   background: #e1f3fd;
   margin: 10px;
@@ -1004,30 +1027,30 @@ body {
   margin-right: 10px;
   width: 272.174px;
 }
-/* line 485, ../../../app/stylesheets/application.sass */
+/* line 500, ../../../app/stylesheets/application.sass */
 #create_list_from_category p {
   margin: 10px;
   text-align: center;
 }
-/* line 489, ../../../app/stylesheets/application.sass */
+/* line 504, ../../../app/stylesheets/application.sass */
 #create_list_from_category label {
   margin-left: 5px;
   width: 70px;
   display: inline-block;
 }
-/* line 494, ../../../app/stylesheets/application.sass */
+/* line 509, ../../../app/stylesheets/application.sass */
 #create_list_from_category input {
   margin: 3px;
 }
-/* line 497, ../../../app/stylesheets/application.sass */
+/* line 512, ../../../app/stylesheets/application.sass */
 #create_list_from_category input[type=text] {
   width: 120px;
 }
-/* line 500, ../../../app/stylesheets/application.sass */
+/* line 515, ../../../app/stylesheets/application.sass */
 #create_list_from_category input[type=submit] {
   margin-left: 83px;
 }
-/* line 503, ../../../app/stylesheets/application.sass */
+/* line 518, ../../../app/stylesheets/application.sass */
 #create_list_from_category h2 {
   background: #0094da;
   color: white;
@@ -1041,7 +1064,7 @@ body {
   -khtml-border-radius: 12px;
   border-radius: 12px;
 }
-/* line 511, ../../../app/stylesheets/application.sass */
+/* line 526, ../../../app/stylesheets/application.sass */
 #create_list_from_category h2 a {
   color: white;
   font-weight: bold;
@@ -1052,12 +1075,12 @@ body {
   text-decoration: underline;
 }
 
-/* line 520, ../../../app/stylesheets/application.sass */
+/* line 535, ../../../app/stylesheets/application.sass */
 .modal {
   display: none;
 }
 
-/* line 523, ../../../app/stylesheets/application.sass */
+/* line 538, ../../../app/stylesheets/application.sass */
 .modal div.close {
   background-image: url(../../images/close.png);
   position: absolute;
@@ -1069,7 +1092,7 @@ body {
   z-index: 9999;
 }
 
-/* line 534, ../../../app/stylesheets/application.sass */
+/* line 549, ../../../app/stylesheets/application.sass */
 form .counter {
   position: absolute;
   left: 15px;
@@ -1078,25 +1101,25 @@ form .counter {
   font-weight: bold;
   color: #666666;
 }
-/* line 542, ../../../app/stylesheets/application.sass */
+/* line 557, ../../../app/stylesheets/application.sass */
 form textarea {
   resize: none;
 }
-/* line 545, ../../../app/stylesheets/application.sass */
+/* line 560, ../../../app/stylesheets/application.sass */
 form .warning {
   color: #660000;
 }
-/* line 547, ../../../app/stylesheets/application.sass */
+/* line 562, ../../../app/stylesheets/application.sass */
 form .exceeded {
   color: #ee0000;
 }
-/* line 550, ../../../app/stylesheets/application.sass */
+/* line 565, ../../../app/stylesheets/application.sass */
 form #tweet_submit {
   padding: 5px;
   float: right;
 }
 
-/* line 554, ../../../app/stylesheets/application.sass */
+/* line 569, ../../../app/stylesheets/application.sass */
 .clear {
   clear: both;
 }
