@@ -1,0 +1,10 @@
+require 'spec_helper'
+
+describe ConfigurationsController do
+
+  #Delete this example and add some real ones
+  it "should use ConfigurationsController" do
+    controller.should be_an_instance_of(ConfigurationsController)
+  end
+
+end
