@@ -5,6 +5,7 @@ Version 0.3.1
 ==========
   Peco Danajlovski <vortexmk@gmail.com>
   * Relabeled some tag related strings, improved CSS, fixed some bugs
+  * Basic administration module for featured topic/tag
 
 03.07.2010
 ==========
